# Zentrio

./: .dockerignore  .env.example  .firebaserc  .gitignore  .gitmodules  .mailmap  CLAUDE.md  CNAME  CUSTOM_DOMAIN_SETUP.md  Dockerfile  LICENSE  README.md  RELEASE_NOTES.md  SECURITY.md  SECURITY_SETUP.md  SETUP_DOCS.md  VITEPRESS_SETUP.md  debug_db.ts  deno.jsonc  docker-compose.yml  firebase.json  index.tsx  inst_user_settings.tmp  netlify.toml  pwabuilder-sw.js  readme.md  reproduce_issue.ts  test.js
.claude/: settings.local.json
.cursor/rules/: zentrio.mdc
.firebase/: hosting.cHVibGlj.cache
.github/: FUNDING.yml  codeql-config.yml  copilot-instructions.md
.github/ISSUE_TEMPLATE/: app-issue.md
.github/badges/: quality.json
.github/scripts/: generate-release-notes.mjs
.github/secrets/: ExportOptions.plist  README.md  debug.keystore
.github/workflows/: badge-update.yml  build-apk.yml  build-libav.yml  codeql.yml  docker-image.yml  docs.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  landing-page.yml  mobile-build.yml  pwa-builder.yml  quality.yml  release.yml  tauri-build.yml  update-stremio-web.yml  vitepress-docs.yml
app/: .eslintrc.json  .gitignore  CSS_MODULES_GUIDE.md  Dockerfile  VERSIONING.md  app.tsx  build-log.txt  capacitor.config.ts  deno.jsonc  dev.ts  eslint-report.json  fresh.gen.ts  index.html  knip-report.json  knip.config.ts  main.ts  package-lock.json  package.json  tailwind.config.js  test-db.js  tsconfig.json  twind.config.ts  type-check-output.txt  type_check_output.txt  vite.config.ts  vitest.config.ts
app/android/: build.gradle  gradle.properties
app/src-tauri/: .gitignore  Cargo.toml  package.json  tauri.conf.json  tauri.ios.conf.json
app/src-tauri/capabilities/: default.json  desktop.json
app/src-tauri/data/imdb/: ratings.db-shm
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
app/src-tauri/src/downloads/: db.rs  events.rs  file_store.rs  hls.rs  manager.rs  mod.rs  notifier.rs  subtitles.rs
app/src-tauri/src/plugins/: immersive_mode.rs  mobile_bridge.rs  mod.rs
context/: better-auth.txt  hono.txt
docs/: ANDROID_SETUP.md  CAPACITOR.md  Gemfile  QUICK_START_ANDROID.md  README.md  _config.yml  android-setup.md  api.md  configuration.md  contributing.md  development.md  environment.md  faq.md  getting-started.md  index.md  migration-strategy.md  mobile.md  netlify.toml  package-lock.json  package.json  releases.md  self-hosting-docker.md  self-hosting.md  sso-oidc.md  story.md  styling-guide.md  sync-architecture.md  sync-implementation-plan.md  trakt.md  usage.md
functions/: eslint.config.js  index.js  package-lock.json  package.json
landing/: README.md  index.html  netlify.toml  optimize.mjs  package.json  tsconfig.json  vite.config.ts
llm/: ANDROID_TV_PLAN.md  ARCHITECTURE.md  CLEANUP_PLAN.md  README.md  offline-plan.md
old/: firebase.json
plans/: downloads_feature_plan.md  hybrid-media-analysis.md  hybrid-streaming-implementation-plan.md
public/: app.js  index.html  server.js  style.css
v1/: README.md
v2/: .env.example  README.md  dev.ts  fresh.gen.ts
(+859 files in other folders)
