[package]
name = "zentrio"
version = "0.4.4"
description = "Zentrio - Stream Your Way"
authors = ["you"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "zentrio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-safe-area-insets-css = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

# Build optimization profiles
[profile.dev]
# Enable incremental compilation for faster dev builds
incremental = true

[profile.release]
# Use 1 codegen unit for maximum optimization (slower build, faster runtime)
codegen-units = 1
# Link-time optimization for smaller binaries
lto = true
# Optimize for size (reduces APK size)
opt-level = "z"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
